<resources>
    <string name="app_name">KeygenManager</string>
    <string name="Add">Add</string>
    <string name="Delete">Delete</string>
    <string name="Auto">Auto</string>
    <string name="Name">Name</string>
    <string name="Keygen">Keygen</string>
    <string name="Valid">Valid until</string>
    <string name="KeygenBox">Enter Customer Keygen</string>
    <string name="NameBox">Enter Customer Name</string>
    <string name="Login">Login</string>
    <string name="web_client_id">308080264443-8tf2hp103b0sgk787eep41upoqbijgqo.apps.googleusercontent.com</string>
    <string-array name="AutoType">
        <item>AutoTangQua</item>
        <item>AutoGhepHop</item>
        <item>AutoTreoBSN</item>
        <item>AutoBuff</item>

    </string-array>
</resources>